Add ability to add new locations
Update README to include blurb on new functionality.

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is a table to track the donuts per hour for Top Pot. Well, it's supposed to be.
+
+This page will also allow the user to enter a new location and their input to add to the table.
